Carousel fix on mobile

--- a/style.css
+++ b/style.css
@@ -40,4 +40,7 @@ a:hover {
   .footer small {
     font-size: 10px;
   }
+  ol.carousel-indicators {
+    margin-bottom: 0;
+  }
 }
